--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/crypto-js": "^4.1.3",
-    "@vercel/edge": "^1.1.0",
     "@upstash/redis": "^1.34.3",
+    "@vercel/edge": "^1.1.0",
     "@vercel/postgres": "^0.5.0",
     "crypto-js": "^4.2.0",
     "pusher-js": "^8.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.17.0",
+    "react-router-dom": "^6.28.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
@@ -48,12 +48,14 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.43.0",
     "@typescript-eslint/parser": "^5.43.0",
+    "daisyui": "^4.12.14",
     "eslint": "^8.27.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-jsx": "^0.1.0",
     "eslint-plugin-jsx-a11y": "^6.6.1",
     "eslint-plugin-react": "^7.31.10",
     "react-snap": "^1.23.0",
+    "tailwindcss": "^3.4.15",
     "typescript": "^4.8.4"
   }
 }
